css/mod1.css
.mark-img 
	{
		float: left;
		margin: 3px;
		/*padding-right: 10px;*/
		max-height: 3.5rem;
		margin-top: 0.5rem;


	}

.project-thumb {
	float: left;
	padding:.2rem;
	
}

.project-img {
	
	float: left;
	padding:1rem;
	margin-right:5px;
	max-width: 35rem;
	
}



.latest  {
	font-family: 'IBM Plex Mono', monospace;
	font-size: x-small;
	font-weight: lighter;

}

.bio
	{
		/*position: relative;*/
		width: 0;
		height: 0;
		border-style: solid;
		border-width: 20px 20px 0 0;
		border-color: #007bff transparent transparent transparent;

    
	}

/*Fonts*/
/*h1
 {
   color: #010101;
    font-size: 75px;
    letter-spacing: -0.055em;
    line-height: 0.9em;
    text-indent: -0.03em;
    margin-bottom: 4rem;
    margin-top: 10px;
    font-weight: 740;
}
*/


h1, .h1,
  {font-family: 'Inter', system-ui, Roboto, Arial, sans-serif;
  color: #010101;
  letter-spacing: -0.055em;
  line-height: 0.9em;
  text-indent: -0.03em;
  margin-bottom: 4rem;
  margin-top: 10px;
  font-weight: 740;
  }
h2, .h2,
h3, .h3,
h4, .h4,
h5, .h5,
h6, .h6 {
  /*font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;*/
  font-family: 'Inter', system-ui, Roboto, Arial, sans-serif;
  font-style: normal;
  font-weight: normal;
  /*letter-spacing: -5px;*/
  color: inherit;
  text-rendering: optimizeLegibility; }
  h1 small, .h1 small,
  h2 small, .h2 small,
  h3 small, .h3 small,
  h4 small, .h4 small,
  h5 small, .h5 small,
  h6 small, .h6 small {
    line-height: 0;
    color: #cacaca; }

/*a {
  outline: none;
  text-decoration: none;
  padding: 2px 1px 0;
}

a:link {
  color: #265301;
}

a:visited {
  color: #437A16;
}

a:focus {
  border-bottom: 1px solid;
  background: #BAE498;
}

a:hover {
  border-bottom: 1px solid;     
  background: #CDFEAA;
}

a:active {
  background: #265301;
  color: #CDFEAA;
}*/

.site-home-link
{

}

.photo-credit
{
	float: right;
	font-size: xx-small;

}

.intro-photo
{
	object-fit: cover;
	max-width: 150px;
	display: block;
	/*float: inline-end;*/
	float: right;
	padding:5px;


}

.mon-text 
{
	font-family: 'IBM Plex Mono', monospace;
    font-style: normal;
    font-weight: 300;
    /*background-color: white;*/
    background-color: rgba(242, 243, 244, 0.8);  /* 80% transparent */
    /*text-shadow: 1px 1px 10px white;*/
    /*background-color: 10px green;*/
}
.mon-text p
{
	margin: 1rem;
}

.mon-text-label 
{
	font-family: 'IBM Plex Mono', monospace;
	font-style: normal;
	font-weight: 500;
	color: white;
	padding: 0.5em 0.5em;
  	margin: 2em auto;
}

.mon-text-label a:link
{
	color: white;
}

.mon-text-label a:visited
{
  color: #bcd4e6;
}

.projects-label
{
	background-color: #265077;
	padding:	10px;
	/*margin:		10px;*/
	color: #f2f3f4;
	font-family: 'IBM Plex Mono', monospace;
	font-style: normal;
	font-weight: 400;
}
.maps-label
{
	background-color: #767caf;
	padding:	10px;
	/*margin:		10px;*/
	color: #f2f3f4;
	font-family: 'IBM Plex Mono', monospace;
	font-style: normal;
	font-weight: 400;
	
}
/*.maps-label p
{
	font-family: 'IBM Plex Mono', monospace;
	font-style: normal;
	font-weight: 400;
}*/
.awards-label
{
background-color: #2d5f5d;
padding:	10px;
	/*margin:		10px;*/
	color: #f2f3f4;
	font-family: 'IBM Plex Mono', monospace;
	font-style: normal;
	font-weight: 400;
}
.visuals-label
{
background-color: #45af2a;
padding:	10px;
	/*margin:		10px;*/
	color: #f2f3f4;
	font-family: 'IBM Plex Mono', monospace;
	font-style: normal;
	font-weight: 400;
}
.illus-label
{
background-color: #e59a9a;
padding:	10px;
	/*margin:		10px;*/
	color: #f2f3f4;
	font-family: 'IBM Plex Mono', monospace;
	font-style: normal;
	font-weight: 400;
}
.chart-label
{
background-color: #a6aacb;
padding:	10px;
	/*margin:		10px;*/
	color: #f2f3f4;
	font-family: 'IBM Plex Mono', monospace;
	font-style: normal;
	font-weight: 400;
}
.anim-label
{
background-color: #6d6840;
padding:	10px;
	/*margin:		10px;*/
	color: #f2f3f4;
	font-family: 'IBM Plex Mono', monospace;
	font-style: normal;
	font-weight: 400;
}
.byline-label
{
background-color: #1e4258;
padding:	10px;
	/*margin:		10px;*/
	color: #f2f3f4;
	font-family: 'IBM Plex Mono', monospace;
	font-style: normal;
	font-weight: 400;
}
.aboutme-label
{
background-color: #d56c06;
padding:	10px;
	/*margin:		10px;*/
	color: #f2f3f4;
	font-family: 'IBM Plex Mono', monospace;
	font-style: normal;
	font-weight: 400;
}




.projects .mon-text-label 
{
	background-color: #265077;
	/*border: 1px solid #4d4b25;*/

}

.awards .mon-text-label 
{
	background-color: #2d5f5d;
	/*border: 1px solid #666446;*/
	}

.visuals .mon-text-label 
{
	background-color: #45af2a;
	/*border: 1px solid #b8b7aa;*/
	}

.maps .mon-text-label 
{
	background-color: #767caf;
	/*border: 1px solid #b8b7aa;*/
	}

.charts .mon-text-label 
{
	background-color: #a6aacb;
	/*border: 1px solid #b8b7aa;*/
	}
.anim .mon-text-label 
{
	background-color: #6d6840;
	/*border: 1px solid #b8b7aa;*/
	}


.illus .mon-text-label 
{
	background-color: #45af2a;
	/*border: 1px solid #b8b7aa;*/
	}

.bylines .mon-text-label 
{
	background-color: #1e4258;
	/*border: 1px solid #ca5c2e;*/
	}

.aboutme .mon-text-label 
{
	background-color: #d56c06;
	/*border: 1px solid #8a4f29;*/
	}

.pages-intro-text
{

}

.map-entry
{
	margin: 2px;
	padding: 2px;
	display: inline-block;
	float: left;
	background-color: #f9f9f9;
}

.map-entry p {
	font-family: 'IBM Plex Mono', monospace;
	font-size: small;
	font-weight: 200;
	line-height: 1.2rem;
}

.datavis-page
{
	margin: 2px;
	padding: 2px;
	display: inline-block;
	float: left;
	background-color: #f9f9f9;
}

.datavis-page p {
	font-family: 'IBM Plex Mono', monospace;
	font-size: small;
	font-weight: 200;
	line-height: 1.2rem;
	margin-bottom: 0rem;
}

.thumb-map
{
	
	margin: 2px;
	/*padding: 2px;*/
	display: inline-block;
	float: left;
}

.thumb-map2 img {
	
	margin: 2px;
	/*padding: 2px;*/
	display: inline-block;
	float: left;
}

.projects
	{
		
		padding: 10px;
		min-height: 5rem;
		background-size: 375px 255px;
		background-image: linear-gradient(to top, transparent, 20%, white),
                  url("../img/innocence-lost.jpg");
        background-repeat: no-repeat;
		
	}

.visuals
	{
		padding: 10px;
		min-height: 5rem;
		background-size: 375px 255px;
		background-image: linear-gradient(to top, transparent, 20%, white),
                  url("../img/line-3-proposed.jpg");
	}

.maps
	{
		padding: 10px;
		min-height: 5rem;
		background-size: 375px 255px;
		background-image: linear-gradient(to top, transparent, 20%, white),
                  url("../img/line-3-proposed.jpg");
	}
.charts
	{
		padding: 10px;
		min-height: 5rem;
		background-size: 375px 270px;
		background-image: linear-gradient(to top, transparent, 20%, white),
                  url("../img/start-ups.png");
	}

.anim
	{
		padding: 10px;
		min-height: 5rem;
		background-size: 375px 270px;
		background-image: linear-gradient(to top, transparent, 20%, white),
                  url("../img/lock-dam-static.jpg");
	}


.illus
	{
		padding: 10px;
		min-height: 5rem;
		background-size: 375px 255px;
		background-image: linear-gradient(to top, transparent, 20%, white),
                  url("../img/pike-miss.jpg");
	}


.visualsline
	{
	background-color: #f7c626;
    bottom: 0;
    content: "";
    height: 3px;
    left: 65px;
    position: absolute;
    transform: rotate(120deg);
    transform-origin: bottom right;
    width: 38px;
    z-index: 4;


	}

.bylines
	{
		padding: 10px;
		min-height: 4rem;
		background-size: 375px 255px;
		background-image: linear-gradient(to top, transparent, 20%, white),
                  url("../img/mercury-nasa-thumb.jpg");
	}
.aboutme
	{
		padding: 10px;
		min-height: 4rem;
		background-size: 375px 255px;
		background-image: linear-gradient(to top, transparent, 20%, white),
                  url("../img/river-waste-02.png");
	}

.awards
	{
		padding: 10px;
		min-height: 4rem;
		background-size: 375px 255px;
		background-image: linear-gradient(to top, transparent, 20%, white),
                  url("../img/river-waste.png");
	}

.skills
	{
		padding: 10px;
		min-height: 4rem;
		background-size: 375px 255px;
		background-image: linear-gradient(to top, transparent, 20%, white),
                  url("../img/river-waste.png");
	}

.note {
  position: relative;
  width: 30%;
  padding: 1em 1.5em;
  margin: 2em auto;
  color: #fff;
  background: #97C02F;
  overflow: hidden;
}

.note:before {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  border-width: 0 16px 16px 0;
  border-style: solid;
  border-color: #fff #fff #658E15 #658E15;
  background: #658E15;
  -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
  -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
  box-shadow: 0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
  /* Firefox 3.0 damage limitation */
  display: block; width: 0;
}

.note.rounded {
  -moz-border-radius: 5px 0 5px 5px;
  border-radius: 5px 0 5px 5px;
}

.note.rounded:before {
  border-width: 8px;
  border-color: #fff #fff transparent transparent;
  -moz-border-radius: 0 0 0 5px;
  border-radius: 0 0 0 5px;
}

.home-links
{
	
	/*min-height: 30px;*/
	/*margin: 20px;*/
	padding-left:10px;
	line-height: .9rem;
}
.home-links-text
{
	/*background: #787878;*/
	color: #bdc2c7;
	font-family: 'IBM Plex Mono', monospace;
	font-style: bold;
	font-weight: 200;
	font-size: x-small;
	text-transform: uppercase;

}

.footer-will
{
	background: #787878;
	/*min-height: 30px;*/
	margin: 20px;
	padding-left:10px;
	padding-right: 10px;
}
.footer-will p
{
	color: #f2f3f4;
	font-family: 'IBM Plex Mono', monospace;
	font-style: bold;
	/*font-weight: 200;*/
	/*font-size: small;*/
	text-transform: uppercase;

}

.footer-will a 
{
	color: #f2f3f4;
}

